k8s/cassandra-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
        - name: cassandra
          image: cassandra:4.1
          ports:
            - containerPort: 9042
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra
spec:
  selector:
    app: cassandra
  ports:
    - port: 9042
      targetPort: 9042
  type: ClusterIP
