k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyurl-server-deployment
  labels:
    app: tinyurl-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyurl-server
  template:
    metadata:
      labels:
        app: tinyurl-server
    spec:
      containers:
        - name: tinyurl-server
          image: chuotcona123/tinyurl-server:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: tinyurl-service
spec:
  type: NodePort
  selector:
    app: tinyurl-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30101

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinyurl-service
                port:
                  number: 3000
